feat(migration): content-index readiness half + drop "twin" wording (#36360)
Step b of the migration-readiness endpoint (#36360):

- ContentIndexMirrorReconciler now real (was a stub): compares the active working
  and live content indices against their .os counterparts across both engines,
  phase-independently. IndiciesInfo holds the cluster-prefixed, un-tagged ES name;
  exact per-engine counts come from each leaf's getIndicesStats() (_stats
  primaries.docs.count, not the 10k-capped search total), keyed by the
  cluster-stripped name (ES bare, OS with .os) — strip-then-tag to match. Emits
  CONTENT_WORKING / CONTENT_LIVE rows with the same missing-counterpart / count-drift
  verdicts and a reindex recommendation. Reads leaves directly, never the router.

- Terminology: renamed "twin" -> "counterpart" across the new readiness code
  (verdict MISSING_TWIN -> MISSING_COUNTERPART); "mirror" (the feature name) kept.

Unit tests: ContentIndexMirrorReconcilerTest (mocked leaves + injected IndiciesInfo)
5/5 — in-sync, missing OS counterpart, count drift, null/absent slots; service test
still 7/7.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>